stopped at home styling on tablet

--- a/src/App.css
+++ b/src/App.css
@@ -42,8 +42,9 @@ a, Link, ul, li {
 }
 
 
-#home, #about {
+#home, #about, #contact {
   width: 100vw;
+  height: 100vh;
   background-color: var(--secColor);
   display: flex;
   flex-direction: column;
@@ -261,6 +262,40 @@ opacity: 0;
 
 
 /* Home */
+#home {
+ justify-content: flex-start;
+}
+
+.subcids {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+}
+
+.subcid {
+  background-color: var(--mainColor);
+  box-shadow: var(--shadow);
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: .5rem;
+  margin-bottom: 2rem;
+}
+
+.description {
+  padding: .5rem;
+  position: relative;
+  left: .5rem;
+
+}
+
+.subcid_image {
+  /* padding: .5rem; */
+  box-shadow: var(--shadow)
+}
 
 /* About */
 
